force-app/main/default/objects/Client_Document__c/Client_Document__c.object-meta.xml
<CustomObject>
    <description>Stores identification and legal documents (e.g. ID card, passport, contract) belonging to a Client Account.</description>
    <label>Client Document</label>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>Client Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>