force-app/main/default/objects/Client_Document__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The Account this document belongs to. Sharing on Client Document is automatically controlled by this parent Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Documents</relationshipLabel>
    <relationshipName>Client_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>