force-app/main/default/objects/Client_Document__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <description>The identifier or number printed on the physical document (e.g. ID card number, passport number, contract number).</description>
    <inlineHelpText>Enter the number exactly as printed on the document.</inlineHelpText>
    <label>Document Number</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>