force-app/main/default/objects/Client_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>The kind of document this record represents, e.g. ID card, passport, driving license or contract.</description>
    <inlineHelpText>Select the type of document.</inlineHelpText>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ID_Card</fullName>
                <label>ID Card</label>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Driving_License</fullName>
                <label>Driving License</label>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>