force-app/main/default/objects/Client_Document__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>The date the document expires, if applicable. Not every document type has an expiration date.</description>
    <inlineHelpText>Leave blank if this document does not expire.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>