force-app/main/default/objects/Client_Document__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <description>The date the document was issued.</description>
    <inlineHelpText>Enter the date shown as the issue date on the document.</inlineHelpText>
    <label>Issue Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>